crates/cribo/tests/snapshots/execution_results@xfail_stickytape_script_with_single_local_import_of_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_script_with_single_local_import_of_package/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
