crates/cribo/tests/snapshots/execution_results@xfail_stickytape_single_file_using_stdlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_single_file_using_stdlib/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
