crates/cribo/tests/snapshots/execution_results@xfail_submodule_imports_parent_function.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_submodule_imports_parent_function/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 60, in <module>",
}
