crates/cribo/tests/snapshots/execution_results@xfail_symlink_circular_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_symlink_circular_dependency/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Testing symlink circular dependency handling",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 81, in <module>",
}
