crates/cribo/tests/snapshots/execution_results@xfail_symlink_multi_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_symlink_multi_circular/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Testing multi-symlink circular dependency",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 144, in <module>",
}
