crates/cribo/tests/snapshots/execution_results@xfail_test_all_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_test_all_exports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
