crates/cribo/tests/snapshots/execution_results@xfail_tree_shake_side_effect_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_tree_shake_side_effect_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Test completed",
    stderr: "",
}
